Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2, 10.3, 10.4, 10.5
-
Component/s: Admin statements
-
Labels:None
Description
Post MDEV-22530 fix, maria.repair test fails.
To reproduce: ./mtr maria.repair --valgrind
CURRENT_TEST: maria.repair
|
--- /home/sujatha/bug_repo/MDEV-22530-10.3/mysql-test/suite/maria/repair.result 2021-05-18 15:46:14.541610374 +0530
|
+++ /home/sujatha/bug_repo/MDEV-22530-10.3/mysql-test/suite/maria/repair.reject 2021-05-19 17:32:11.008555697 +0530
|
@@ -30,11 +30,6 @@
|
SET max_session_mem_used=50000;
|
REPAIR LOCAL TABLE t1 USE_FRM;
|
Table Op Msg_type Msg_text
|
-t1 repair error Failed to open partially repaired table
|
-Warnings:
|
-Error 1290 The MariaDB server is running with the --max-thread-mem-used=50000 option so it cannot execute this statement
|
REPAIR LOCAL TABLE t1;
|
Table Op Msg_type Msg_text
|
-test.t1 repair Error The MariaDB server is running with the --max-thread-mem-used=50000 option so it cannot execute this statement
|
-test.t1 repair error Corrupt
|
DROP TABLE t1;
|
|