MDEV-25730: maria.repair test fails with valgrind

cherry-pick commit: 1fff2398ef3dda1a7e8404f18e4e165823bd4e0a
MDEV-22530 post push fixes from 10.6.

Followup. If the KILL happens - report it as a failure,
don't eat it up silently. Note that this has to be done after `table_name`
is populated, so that the error message could show it.